[gd_scene load_steps=10 format=3 uid="uid://bj0pulmfha8xd"]

[ext_resource type="Script" uid="uid://dnbba6ndcwngu" path="res://scene/objects/Enemy/triangleDash/triangle_dash.gd" id="1_uv1dc"]
[ext_resource type="Texture2D" uid="uid://bayt0j8uakhe3" path="res://scene/objects/Enemy/triangleDash/triangleDash.png" id="2_tit0q"]
[ext_resource type="PackedScene" uid="uid://cdw671x8skhgy" path="res://scene/components/health_component.tscn" id="3_mjvjb"]
[ext_resource type="PackedScene" uid="uid://mcgwssm11xbq" path="res://scene/components/exp_bottle_drop_component.tscn" id="4_74uya"]
[ext_resource type="PackedScene" uid="uid://cm1qk288p0nb8" path="res://scene/components/hurt_box_component.tscn" id="5_agrvn"]
[ext_resource type="AudioStream" uid="uid://dkpy2xuhl3prp" path="res://resources/sounds/hit_sound.mp3" id="6_tit0q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tit0q"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uv1dc"]
radius = 5.0990195

[sub_resource type="CircleShape2D" id="CircleShape2D_mjvjb"]
radius = 11.0

[node name="triangleDash" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(0, 12)
scale = Vector2(1.5200005, 1.5199997)
script = ExtResource("1_uv1dc")

[node name="ExpBottleDropComponent" parent="." instance=ExtResource("4_74uya")]

[node name="HealthComponent" parent="." instance=ExtResource("3_mjvjb")]
max_health = 5.0

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_agrvn")]
light_mask = 256
visibility_layer = 512
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_tit0q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_uv1dc")
disabled = true

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_mjvjb")

[node name="TriangleDash" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, -7.894745)
scale = Vector2(0.026162978, 0.026162978)
texture = ExtResource("2_tit0q")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tit0q")
bus = &"SFX"
